# circaPy

./: .gitignore  README.md  environment.yml  makefile  notes.md  pyproject.toml
.github/workflows/: add-to-project.yml  python-package-conda.yml
circaPy/: activity.py  periodogram.py  plots.py  preprocessing.py
tests/: activity_tests.py  episode_finder_tests.py  periodogram_tests.py  plots_tests.py  preprocessing_tests.py  test_dev.py
